--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>PC版跳一跳</title>
+    <style>
+        html,body{
+           height: 100%;
+       }
+       body {
+           margin: 0px;
+           overflow: hidden;
+           font-family: 'Roboto Mono', monospace;
+           font-size: 14px;
+           line-height: 24px;
+           background-color: #ffffff;
+           color: var(--text-color);
+       }    
+   </style>
 </head>
 <body>
     
